bdr.BDR.scala.error
Compilation error:
BDR:6: error: not found: value getIndication
if (getIndication() == "R"){
    ^BDR:9: error: not found: value getIndication
} else if (getIndication() == "L"){
           ^BDR:12: error: not found: value getIndication
} else if (getIndication() == "I"){
           ^BDR:16: error: not found: value getIndication
} else if (getIndication() == "A"){
           ^BDR:18: error: not found: value getIndication
} else if (getIndication() == "B"){
           ^BDR:21: error: not found: value getIndication
} else if (getIndication() == "C"){
           ^BDR:25: error: not found: value getIndication
} else if (getIndication() == "Z"){
           ^BDR:27: error: not found: value getIndication
} else if (getIndication() == "Y"){
           ^BDR:30: error: not found: value getIndication
} else if (getIndication() == "X"){
           ^